--- a/AcademyApp/AcademyApp/LoginPage.xaml
+++ b/AcademyApp/AcademyApp/LoginPage.xaml
@@ -14,6 +14,7 @@
             <Entry x:Name="passwordEntry" IsPassword="true" />
             <Button Text="Login" Clicked="OnLoginButtonClicked" />
             <Label x:Name="messageLabel" />
+            <Button Text="Sign Up" Clicked="OnSignUpButtonClicked" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
