Login and authorization changes.

--- a/AcademyApp/AcademyApp/MainPage.xaml
+++ b/AcademyApp/AcademyApp/MainPage.xaml
@@ -4,25 +4,9 @@
              xmlns:local="clr-namespace:AcademyApp"
              x:Class="AcademyApp.MainPage" >
     <ContentPage.Content>
-        <StackLayout Orientation="Vertical">
-            <StackLayout Orientation="Horizontal" Padding="10,0,10,0">
-                <Label x:Name="note" HorizontalOptions="FillAndExpand" Text="Students Info" />
-                <Button x:Name="add" Text="New Student" Clicked="Add_Clicked" />
-            </StackLayout>
-            <ListView x:Name="ListView1" RowHeight="60">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <ViewCell>
-                            <StackLayout Orientation="Vertical" Padding="8,0,8,0">
-                                <!--<Label Text="Student Name:" TextColor="#000" FontSize="14"  />-->
-                                <Label Text="{Binding RoleName}" TextColor="#000" FontSize="14" LineBreakMode="TailTruncation" />
-                                <!--<Label Text="Student Address:" TextColor="#000" FontSize="14"  />-->
-                                <Label Text="{Binding IsActive}" TextColor="#000" LineBreakMode="TailTruncation" />
-                            </StackLayout>
-                        </ViewCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
+        <StackLayout>
+            <Label Text="Main app content goes here" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" />
+            <Button Text="Logout" Clicked="OnLogoutButtonClicked" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
