--- a/UWP/MainPage.xaml
+++ b/UWP/MainPage.xaml
@@ -1,13 +1,12 @@
-﻿<Page
-    x:Class="AcademyApp.Uwp.MainPage"
+﻿<forms:WindowsPage
+    x:Class="UWP.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:AcademyApp.Uwp"
+    xmlns:local="using:UWP"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:forms="using:Xamarin.Forms.Platform.UWP"
     mc:Ignorable="d">
 
-   
-
-
-</Page>
+    
+</forms:WindowsPage>
