--- a/AcademyApp/AcademyApp/SignUpPage.xaml
+++ b/AcademyApp/AcademyApp/SignUpPage.xaml
@@ -6,14 +6,18 @@
              Title="Sign Up">
     <ContentPage.Content>
         <StackLayout VerticalOptions="StartAndExpand">
+            <Label Text="First Name" />
+            <Entry x:Name="frstnameEntry" />
+            <Label Text="Last Name" />
+            <Entry x:Name="lastnameEntry"  />
             <Label Text="Username" />
-            <Entry x:Name="usernameEntry" Placeholder="username" />
+            <Entry x:Name="usernameEntry"  />
             <Label Text="Password" />
             <Entry x:Name="passwordEntry" IsPassword="true" />
             <Label Text="Email address" />
             <Entry x:Name="emailEntry" />
             <Label Text="Gender" />
-            <Picker Title="(Select Gender)"  x:Name="pkrGender"  />
+            <!--<Picker Title="(Select Gender)"  x:Name="pkrGender"  />-->
 
 
             <Label Text="User Type" />
