--- a/AcademyApp/AcademyApp/UserDetails.xaml
+++ b/AcademyApp/AcademyApp/UserDetails.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+              xmlns:local="clr-namespace:AcademyApp"
              x:Class="AcademyApp.UserDetails">
     <ContentPage.Content>
         <StackLayout>
@@ -22,7 +23,7 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-
+            <local:RoundedEntry></local:RoundedEntry>
       
             <Button Text="Sign Up" Clicked="OnSignUpButtonClicked" />
         </StackLayout>
