--- a/AcademyApp.UWP/App.xaml
+++ b/AcademyApp.UWP/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application
-    x:Class="AcademyApp.Uwp.App"
+    x:Class="AcademyApp.UWP.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:AcademyApp.Uwp"
+    xmlns:local="using:AcademyApp.UWP"
     RequestedTheme="Light">
 
 </Application>
